src/objects/AdmissionPreReqAudit__c.object
<CustomObject>
    <description>A current table of the pre-req audit that admissions goes through.</description>
    <fields>
        <fullName>AcademicSkillsPassPointsDel__c</fullName>
        <label>Academic Skills Pass Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcademicSkillsScoreDel__c</fullName>
        <label>Academic Skills Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ActivelyWorkingInTheField__c</fullName>
        <label>Actively Working in the Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BachelorsDegree__c</fullName>
        <label>Bachelors Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundCheck__c</fullName>
        <label>Background Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHEAApprovedDegree__c</fullName>
        <label>CHEA Approved Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPRCert__c</fullName>
        <label>CPR Cert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollegeAlgebra__c</fullName>
        <label>College Algebra</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollegeExperience__c</fullName>
        <label>College Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECRecommendation__c</fullName>
        <label>EC Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EssayPassPoints__c</fullName>
        <label>Essay Pass Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EssayScore__c</fullName>
        <label>Essay Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FitInventory__c</fullName>
        <label>Fit Inventory</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthcareCerts__c</fullName>
        <label>Healthcare Certs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighLevelCoursework__c</fullName>
        <label>High Level Coursework</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITCertifications__c</fullName>
        <label>IT Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOU__c</fullName>
        <label>MOU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MathPassPointsDel__c</fullName>
        <label>Math Pass Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MathScoreDel__c</fullName>
        <label>Math Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NaturalScienceWithLab__c</fullName>
        <label>Natural Science with Lab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this AdmissionPreReqAudit__C record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PracticumAgreement__c</fullName>
        <label>Practicum Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreCalcOrCalc__c</fullName>
        <label>Pre-Calc or Calc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramManagerApproval__c</fullName>
        <label>Program Manager Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>B.A. Interdisciplinary Studies (K-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Early Childhood Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Mathematics (5-9 or 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Science (5-9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Science (Chemistry, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Science (Physics, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Science (Biological Sciences, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Science (Geosciences, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.A. Special Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Baccalaureate Teacher Preparation Program (K-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Baccalaureate Teacher Preparation Program, Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Baccalaureate Teacher Preparation Program, Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Baccalaureate Teacher Preparation Program, Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Teaching (K-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Teaching, Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Teaching, Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Teaching, Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S. Curriculum and Instruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S. Special Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S. Educational Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. English Language Learning/English as a Second Language (ELL/ESL) (PK-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Mathematics Education (K-6, 5-9, or 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Science Education (5-9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Science Education (Chemistry, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Science Education (Physics, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Science Education (Biological Sciences, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A. Science Education (Geosciences, 5-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Ed. Instructional Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Ed. Learning and Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endorsement Preparation Program in English Language Learning (ELL/ESL) (PK-12)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RNLicense__c</fullName>
        <label>RN License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadinessInventory__c</fullName>
        <label>Readiness Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReadinessPassPoints__c</fullName>
        <label>Readiness Pass Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentStatement__c</fullName>
        <label>Student Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEAS__c</fullName>
        <label>TEAS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL__c</fullName>
        <label>TOEFL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_License__c</fullName>
        <label>Teaching License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwoLettersOfRecommendation__c</fullName>
        <label>Two Letters of Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderstandTimeCommitment__c</fullName>
        <label>Understand Time Commitment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderstandTimeToCompletion__c</fullName>
        <label>Understand Time to Completion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhyAGoodFitEssay__c</fullName>
        <label>Why a Good Fit Essay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkExperience__c</fullName>
        <label>Work Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Admission Pre-Req Audit</label>
    <nameField>
        <displayFormat>P-{00}</displayFormat>
        <label>Program</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission Pre-Req audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>